<resources>
    <string name="app_name">GestionInterim</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Passer</string>
    <string name="bienvenue">Bienvenue sur</string>
    <string name="interimConnect">InterimConnect</string>
    <string name="slogan">Connectez le talent avec l\'opportunité</string>
    <string name="titreInterimaire">Vous êtes à la recherche d’un emploi ?</string>
    <string name="texteInterimaire">Notre application d\'intérim est le moyen le plus rapide et le plus facile de trouver un emploi temporaire. Nous avons rassemblé des centaines d\'offres d\'emploi provenant d\'entreprises de tous secteurs, et nous les avons rendues accessibles en quelques clics.
        Une fois que vous avez postulé à une offre, nous vous tenons informé de l\'avancement de votre candidature.
        Inscrivez-vous dès maintenant et trouvez les offres parfaites en un rien de temps !</string>
    <string name="titreEmployeur">Vous êtes un employeur à la recherche de volontaire ?</string>
    <string name="texteEmployeur">Notre application vous permet de rechercher parmi des milliers d\'intérimaires inscrits, afin de trouver les profils qui correspondent aux besoins de votre entreprise.
        Grâce à notre interface conviviale et notre algorithme de recherche avancé, la recherche d\'intérimaires n\'a jamais été aussi simple et efficace.
        Inscrivez-vous dès maintenant pour bénéficier de toutes les fonctionnalités offertes par notre application et trouver les intérimaires parfaits pour votre entreprise en un rien de temps !</string>
    <string name="titreAgenceInterim">Vous êtes une agence d’intérim ?</string>
    <string name="texteAgenceInterim">Notre application vous permet de rechercher parmi des milliers d\'utilisateurs inscrits, afin de trouver les profils qui correspondent aux besoins de vos clients.
        Avec notre interface conviviale et notre algorithme de recherche avancé, la recherche de talents n\'a jamais été aussi simple et efficace.
        Inscrivez-vous dès maintenant et trouvez les candidats parfaits pour vos clients en un rien de temps !</string>
    <string name="nomUtilisateurAdresseMail">Nom d’utilisateur ou adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="connectezvous">Connectez vous pour continuer !</string>
    <string name="noAccount">Vous n’avez pas de compte ?</string>
    <string name="clickHere">Cliquez ici !</string>
    <string name="loginLater">Se connecter plus tard</string>
    <string name="inscriptionFree">Inscrivez-vous gratuitement</string>
    <string name="whoareyou">Vous êtes ?</string>
    <string name="chercheurEmploi">Chercheur d\'emploi</string>
    <string name="employeur">Employeur</string>
    <string name="agenceInterim">Agence d\'intérim</string>
    <string name="validez">Validez !</string>
    <string name="yesAccount">Vous avez déjà un compte ?</string>
    <string name="connectezvousbis">Connectez-vous !</string>
    <string name="inscriptionLater">S\'inscrire plus tard</string>
    <string name="inscriptionMDP">Mot de passe : (obligatoire)</string>
    <string name="inscriptionConfirmationMDP">Confirmez votre mot de passe : (obligatoire)</string>
    <string name="inscriptionValidation">Veuillez renseignez le code de validation</string>
    <string name="inscriptionValidationResendCode">Vous n’avez pas recu le code?</string>
    <string name="inscriptionValidationResendCodeClickHere">Cliquez ici pour renvoyer le code de validation</string>
    <string name="inscriptionInterimaire">Vous êtes à la recherche d’un job</string>
    <string name="inscriptionInterimaireNom">Nom : (obligatoire)</string>
    <string name="inscriptionInterimairePrenom">Prénom : (obligatoire)</string>
    <string name="inscriptionInterimaireNationalite">Nationalité : (optionnel)</string>
    <string name="inscriptionInterimaireMail">Mail : (optionnel)</string>
    <string name="inscriptionInterimaireTelephone">Téléphone : (optionnel)</string>
    <string name="inscriptionInterimaireDateNaissance">Date de naissance : (optionnel)</string>
    <string name="inscriptionInterimaireVille">Ville : (optionnel)</string>
    <string name="inscriptionInterimaireCv">CV : (optionnel)</string>
    <string name="inscriptionInterimaireCommentaires">Commentaires : (optionnel)</string>
    <string name="inscriptionEmployeur">Vous êtes un employeur</string>
    <string name="inscriptionEmployeurNom">Nom de l\'entreprise : (obligatoire)</string>
    <string name="inscriptionEmployeurService">Nom de votre service : (optionnel)</string>
    <string name="inscriptionEmployeurSousService">Nom de votre sous service : (optionnel)</string>
    <string name="inscriptionEmployeurNumeroNational">Numéro de l’entité dépositaire (obligatoire)</string>
    <string name="inscriptionEmployeurContact1">Nom personne - contact 1 (optionnel)</string>
    <string name="inscriptionEmployeurContact2">Nom personne - contact 2 (optionnel)</string>
    <string name="inscriptionEmployeurMail1">Mail - contact 1 (obligatoire)</string>
    <string name="inscriptionEmployeurMail2">Mail - contact 2 (optionnel)</string>
    <string name="inscriptionEmployeurTelephone1">Téléphone - contact 1 (optionnel)</string>
    <string name="inscriptionEmployeurTelephone2">Téléphone - contact 2 (optionnel)</string>
    <string name="inscriptionEmployeurAdresse">Adresse (obligatoire)</string>
    <string name="inscriptionEmployeurVille">Ville : (obligatoire)</string>
    <string name="inscriptionAgence">Vous êtes une agence</string>
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_search_item_job">Recherche</string>
    <string name="bottom_search_item">Trouver un job</string>
    <string name="bottom_connect_item">Se connecter</string>
    <string name="accueil_create_login_account">Créer un compte ou se connecter</string>
    <string name="sub_title_accueil">Mon accueil</string>
    <string name="sub_title_search">Recherchez des offres parmis des centaines !</string>
    <string name="top_menu_pour_vous">Pour vous</string>
    <string name="trouver_job_faites_recherche">Faites votre recherche : </string>
    <string name="trouver_job_plus_filtres">Plus de filtres : </string>
    <string name="trouver_job_search">Recherchez un métier</string>
    <string name="accueil_voir_profil">Voir mon profil intérimaire</string>
    <string name="accueil_voir_missions">Voir ses missions</string>
    <string name="accueil_voir_missions_a_valider">Missions à valider</string>
    <string name="accueil_voir_candidatures">Voir ses candidatures</string>
    <string name="bottom_missions_item">Missions</string>
    <string name="bottom_candidatures_item">Candidatures</string>
    <string name="bottom_profil_item">Profil</string>
    <string name="sub_title_consult_missions">Consultez vos missions</string>
    <string name="postule_offres">Postulez pour une offre !</string>
    <string name="add_candidature">Ajouter une candidature !</string>
    <string name="list_candidature">Voir mes candidatures crées !</string>
    <string name="candidatures_envoyees">Candidatures envoyées</string>
    <string name="candidatures_valider">Candidatures validées</string>
    <string name="candidatures_refusees">Candidatures refusées</string>
    <string name="candidature_spontanée">Candidature spontanée</string>
    <string name="offre_details">Détails de l\'offre</string>
    <string name="offre_candidature">Candidater</string>
    <string name="interimaireNom">Nom</string>
    <string name="interimairePrenom">Prénom</string>
    <string name="interimaireNationalite">Nationalité</string>
    <string name="interimaireMail">Mail</string>
    <string name="interimaireTelephone">Téléphone</string>
    <string name="interimaireDateNaissance">Date de naissance</string>
    <string name="interimaireVille">Ville</string>
    <string name="interimaireCv">CV</string>
    <string name="interimaireCommentaires">Commentaires</string>
    <string name="accueil_suppression_profil">Supprimer le compte</string>
    <string name="accueil_deconnexion_profil">Deconnexion</string>
    <string name="accueil_deconnexion">Se déconnecter</string>
    <string name="accueil_voir_profil_employer">Voir mon profil employeur</string>
    <string name="accueil_consult_annonces_employer">Consulter ses annonces</string>
    <string name="accueil_depose_annonce_employer">Déposer une annonce</string>
    <string name="accueil_candidature_a_valider_employer">Candidature à valider</string>
    <string name="accueil_mission_en_cours_employer">Missions en cours</string>
    <string name="welcomeEmployeur">Bienvenue <font color="#FF0000">%1$s</font> !</string>
    <string name="slideTypeAbonnementTitle">Types d\'abonnement</string>
    <string name="slideTypeAbonnementText">Vous pouvez choisir entre différents types d\'abonnement, allant d\'un abonnement ponctuel à un abonnement indéterminé, avec différents avantages et conditions pour chaque type.</string>
    <string name="slideGestionCandidaturesTitle">Gestion des candidatures</string>
    <string name="slideGestionCandidaturesText">Vous pouvez consulter les candidatures aux offres déposées, les chercher selon différents critères, les accepter ou les refuser, les bloquer ou les signaler, et même les associer à des étiquettes pour mieux les organiser.</string>
    <string name="slideGestionOffresTitle">Gestion des offres</string>
    <string name="slideGestionOffresText">Vous pouvez déposer une offre d\'emploi en remplissant les informations nécessaires, ou consulter et gérer les offres déjà déposées, y compris en créant des catégories pour mieux les organiser.</string>
    <string name="bottom_voir_annonces_item">Mes annonces</string>
    <string name="bottom_deposer_item">Poster</string>
    <string name="add_offers_intitule">Intitulé de la mission</string>
    <string name="add_offers_description">Description de la mission</string>
    <string name="add_offers_periode_debut">Date de début</string>
    <string name="add_offers_periode_fin">Date de fin</string>
    <string name="add_offers_remuneration">Rémunération taux horaire</string>
    <string name="add_offers_title">Ajouter une annonce</string>
    <string name="addOfferButton">Ajouter l\'offre</string>
    <string name="add_offers_experience">Expérience requise</string>
    <string name="top_menu_consult_annonces_deposees">Annonces déposées</string>
    <string name="top_menu_consult_candidatures_traiter">Candidatures à traiter</string>
    <string name="top_menu_consult_missions_validées">Missions validées</string>
    <string name="voirCandidatures">Voir candidature</string>
    <string name="nameEmployer">Nom employeur</string>
    <string name="nameService">Nom service</string>
    <string name="nameSousService">Nom sous-service</string>
    <string name="numeroEntite">Numéro national de l\'entité dépositaire</string>
    <string name="nomPersonneContact1">Nom personne - contact 1</string>
    <string name="nomPersonneContact2">Nom personne - contact 2</string>
    <string name="mailPersonneContact1">Mail personne - contact 1</string>
    <string name="mailPersonneContact2">Mail personne - contact 2</string>
    <string name="phonePersonneContact1">Téléphone personne - contact 1</string>
    <string name="phonePersonneContact2">Téléphone personne - contact 2</string>
    <string name="abonnement">Abonnement</string>
    <string name="conditionsUtilisations">Les conditions d’utilisation</string>
    <string name="conditionsUtilisation1">- Vous êtes responsable de la vérification que vous avez les droits nécessaires pour publier du contenu ou des offres d\'emploi sur notre plateforme.</string>
    <string name="conditionsUtilisation2">- Vous acceptez de ne pas utiliser notre service pour publier du contenu ou des offres d\'emploi illégaux ou frauduleux.</string>
    <string name="abonnementBouton">Souscription</string>
</resources>