<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_page"
        android:title="@string/bottom_home_item"
        android:icon="@drawable/ic_home"
        />


    <item
        android:id="@+id/voir_message_page"
        android:title="Mes messages"
        android:icon="@drawable/ic_message"/>


    <item
        android:id="@+id/voir_annonces_page"
        android:title="@string/bottom_voir_annonces_item"
        android:icon="@drawable/ic_voir_annonces"/>

    <item
        android:id="@+id/deposer_annonces_page"
        android:title="@string/bottom_deposer_item"
        android:icon="@drawable/ic_share"/>

    <item
        android:id="@+id/profil_page"
        android:title="@string/bottom_profil_item"
        android:icon="@drawable/ic_user"/>

</menu>